--- a/.github/workflows/pr-checks.yaml
+++ b/.github/workflows/pr-checks.yaml
@@ -39,3 +39,15 @@ jobs:
         uses: Joe-Downs/pr-labeler@main
         with:
           token: "${{ secrets.GITHUB_TOKEN }}"
+
+  milestone:
+    permissions:
+      issues: write
+      pull-requests: write
+    name: Milestone Pull Request
+    runs-on: ubuntu-latest
+    steps:
+      - name: Pull Request Milestoner
+        uses: Joe-Downs/pr-milestoner@main
+        with:
+          token: "${{ secrets.GITHUB_TOKEN }}"
