--- a/.github/workflows/pr-checks.yaml
+++ b/.github/workflows/pr-checks.yaml
@@ -48,6 +48,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Pull Request Milestoner
-        uses: Joe-Downs/pr-milestoner@main
+        uses: open-mpi/pr-milestoner@v1.0.0
         with:
           token: "${{ secrets.GITHUB_TOKEN }}"
