--- a/.ci/community-jenkins/Jenkinsfile
+++ b/.ci/community-jenkins/Jenkinsfile
@@ -30,6 +30,13 @@ if (buildNumber > 1) {
 }
 milestone(buildNumber)
 
+// Add build description linking back to PR. This is redundant to the "GitHub"
+// link on the Pull Request page, but the Build page does not have a direct link
+// back to the PR. The "Details" link at the bottom of the GitHub PR page brings
+// you to the Jenkins Build page, so we're adding the link back to the GitHub PR
+// page.
+currentBuild.description = "This is a build of <a href=\"${CHANGE_URL}\"}\">Open MPI PR #${CHANGE_ID}</a>"
+
 check_stages = prepare_check_stages()
 println("Initialized Pipeline")
 
@@ -46,15 +53,10 @@ println('Tests Completed')
 // build stage is a map of different configurations to test.
 def prepare_check_stages() {
 
-    //TODO: add these back
-    //def configure_options = ["--disable-dlopen", "--disable-oshmem", "--enable-builtin-atomic", "--enable-ipv6"]
-    //def compilers = ["clang10", "gcc5", "gcc6", "gcc7", "gcc8", "gcc9", "gcc10"]
-    //def platforms = ["amazon_linux_2", "amazon_linux_2-arm64", "rhel7", "rhel8", "ubuntu_18.04"]
+    def configure_options = ["--disable-dlopen", "--disable-oshmem", "--enable-builtin-atomic", "--enable-ipv6"]
+    def compilers = ["clang10", "gcc5", "gcc6", "gcc7", "gcc8", "gcc9", "gcc10"]
+    def platforms = ["amazon_linux_2", "amazon_linux_2-arm64", "rhel7", "rhel8", "ubuntu_18.04"]
     def check_stages_list = []
-
-    def configure_options = []
-    def compilers = []
-    def platforms = ["amazon_linux_2"]
 
     // Build everything stage
     def build_parallel_map = [:]
@@ -63,18 +65,17 @@ def prepare_check_stages() {
         build_parallel_map.put(name, prepare_build(name, platform, ""))
     }
 
-    //TODO: add this back
-    // for (compiler in compilers) {
-    //     def name = "Compiler: ${compiler}".replaceAll("-", "")
-    //     build_parallel_map.put(name, prepare_build(name, compiler, "--compiler \\\"${compiler}\\\""))
-    // }
+    for (compiler in compilers) {
+        def name = "Compiler: ${compiler}".replaceAll("-", "")
+        build_parallel_map.put(name, prepare_build(name, compiler, "--compiler \\\"${compiler}\\\""))
+    }
 
-    //   for (configure_option in configure_options) {
-    //     def name = "Configure: ${configure_option}".replaceAll("-", "")
-    //     build_parallel_map.put(name, prepare_build(name, "(ec2&&linux)", "--configure-args \\\"${configure_option}\\\""))
-    // }
+      for (configure_option in configure_options) {
+        def name = "Configure: ${configure_option}".replaceAll("-", "")
+        build_parallel_map.put(name, prepare_build(name, "(ec2&&linux)", "--configure-args \\\"${configure_option}\\\""))
+    }
 
-    //build_parallel_map.put("distcheck", prepare_build("distcheck", "tarball_build", "--distcheck"))
+    build_parallel_map.put("distcheck", prepare_build("distcheck", "tarball_build", "--distcheck"))
 
     check_stages_list.add(build_parallel_map)
 
